# adult-income-prediction-client-repo

./: README.md  pyproject.toml
scripts/: curl_example.sh
src/adult_income_client/: __init__.py  client.py  config.py  example.py
